feat: REST API + React SPA complete